[gd_scene load_steps=4 format=3 uid="uid://0njrbnrxk1ij"]

[ext_resource type="Script" path="res://shared/item/item_root.gd" id="1_7fgfr"]
[ext_resource type="Script" path="res://shared/item/item.gd" id="2_ul3h4"]
[ext_resource type="Texture2D" uid="uid://c1osq1d33casa" path="res://shared/item/item.png" id="3_1e3l7"]

[node name="Item" type="Node2D"]
script = ExtResource("1_7fgfr")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("2_ul3h4")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(82.5, 78.0285)
scale = Vector2(0.98125, 1.01308)
polygon = PackedVector2Array(-9, 48, -50, 50, -50, -52, 50, -49, 49, 51)

[node name="Image" type="Sprite2D" parent="."]
position = Vector2(81, 77)
texture = ExtResource("3_1e3l7")

[node name="HoverLabel" type="RichTextLabel" parent="."]
visible = false
clip_contents = false
offset_left = 77.0
offset_right = 287.0
offset_bottom = 25.0
text = "Mouse over label"
fit_content = true
scroll_active = false

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_mouse_exited"]
[connection signal="mouse_exited" from="HoverLabel" to="HoverLabel" method="_on_mouse_exited"]
